--- a/static/styles.css
+++ b/static/styles.css
@@ -1,51 +1,8 @@
 
-body {
-    background-color: #fff;
-    color: slategray;
-    font-family: arial;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-h1,h2,h3,h4,h5{
-    font-weight: normal;
-    background:aliceblue;
+*{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-a, a:visited {
-    color: slategrey;
-    text-decoration: none;
-}
-
-a:hover {
-    color: darkblue;
-    text-decoration: none;
-    background-color: white;
-    /* font-weight: bold; */
-}
-
-body {
-    max-width: 960px;
-    margin: 20px auto;
-    padding: 20px auto;
-}
-
-
-header {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    background:aliceblue;
-    position: fixed;
-    top: 0px;
-    z-index: 999;
-    /* padding-right: 50px auto; */
-}
-
-footer {
-    width: 100%;
-    background:aliceblue;
-    position: fixed;
-    bottom: 0px;
-}
-
-
