updated all the html pages and finished the css stylesheet

--- a/quotes/templates/quotes/about.html
+++ b/quotes/templates/quotes/about.html
@@ -4,5 +4,29 @@
     
     {% block content %}
 
+        <div class="about_section">
+            <h1> About </h1>
+            <p> 
+                Welcome to the <strong>Patrick Star</strong> Quotes Generator webapp! 
+                This site randomly displays quotes from everyone's favorite pink starfish, Patrick Star,
+                from the beloved show <em>SpongeBob SquarePants</em>. 
+            </p>
+            
+            <h3>Who is Patrick Star?</h3>
+            <p> 
+                Patrick is SpongeBob's best friend and a resident of Bikini Bottom. 
+                He's known for his goofy personality, quirky outlook on life, and iconic one-liners, 
+                Patrick has made audiences laugh for decades. His quotes remind us not to take life too seriously.
+            </p>
+
+            <h3>Who are the Creators?</h3>
+            <p> 
+                SpongeBob SquarePants was created by Stephen Hillenburg, a marine science educator and animator. 
+                Hillenburg combined his love of ocean biology with his passion for art to bring the underwater world of Bikini Bottom to life. 
+                First airing in 1999 on Nickelodeon, the show quickly became a global phenomenon thanks to its humor, creativity, and memorable characters like Patrick Star. 
+            </p>
+        </div>
+
+
 
     {% endblock %}
