--- a/quotes/templates/quotes/base.html
+++ b/quotes/templates/quotes/base.html
@@ -5,7 +5,7 @@
 <html>
 
     <head>
-        <title>Patrick Star Famous Quotes/title>
+        <title>Patrick Star's Quotes</title>
         <link rel="stylesheet" href ="{% static 'styles.css' %}">
     </head>
     <body>
@@ -14,9 +14,9 @@
 
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="{% url 'quote_page' %}">Quote of the Day</a></li>
+                <li><a href="{% url 'show_all' %}">Show All</a></li>
+                <li><a href="{% url 'about_page' %}">About</a></li>
             </ul>
         </nav>
     
