added comments and the text files required for gradescope submission

--- a/quotes/templates/quotes/show_all.html
+++ b/quotes/templates/quotes/show_all.html
@@ -1,3 +1,10 @@
+<!-- 
+File: quotes.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This is the show all section of the quotes app. 
+It displays all quotes and images of Patrick Star.
+-->
+
 <!-- quote/template/quote/quote.html  -->
 
 {% extends "quotes/base.html" %}
