--- a/quotes/templates/quotes/about.html
+++ b/quotes/templates/quotes/about.html
@@ -1,3 +1,11 @@
+<!-- 
+File: about.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This is the about page for the quotes app.
+It gives information about the app and the character it quotes - Patrick Star.
+-->
+
+
 <!-- quote/template/quote/about.html  -->
 
 {% extends "quotes/base.html" %}
