--- a/quotes/templates/quotes/base.html
+++ b/quotes/templates/quotes/base.html
@@ -1,3 +1,9 @@
+<!-- 
+File: base.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This is the base template for the quotes app.
+-->
+
 <!-- quote/template/quote/base.html  -->
 
 {% load static %}
