--- a/quotes/templates/quotes/quote.html
+++ b/quotes/templates/quotes/quote.html
@@ -1,3 +1,10 @@
+<!-- 
+File: quotes.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This is the quotes section of the quotes app.
+It displays a random quote from Patrick Star along with a random image of him.
+-->
+
 <!-- quote/template/quote/quote.html  -->
 
 {% extends "quotes/base.html" %}
