--- a/static/styles.css
+++ b/static/styles.css
@@ -22,7 +22,7 @@ nav {
     padding-top: 5%;
     padding-left: 2%;
     border-right: 1px solid #d4d4d4;
-    background-color: #FFF4F4;
+    background-color: #FFFCF7;
     font-size: calc(2px + 1vw);
 }
 
@@ -45,131 +45,10 @@ body{
     margin: 5% 0 0 18%;
     font-family: poppins, sans-serif;
     display: flex;
-    background-color: #FFF4F4;
+    background-color: #FFFCF7;
     flex-direction: column;
     align-items: center;
     height: 100vh;
     gap: 3%;
     font-size: calc(3px + 1vw);
-}
-
-h1{
-    font-size: calc(10px + 2vw);
-    color: #BD385E;
-}
-
-h3{
-    font-size: calc(7px + 1vw);
-    color: #BD385E;
-}
-
-body img{
-    margin: 3% 0;
-}
-
-#quote_text{
-    align-items: center;
-    text-align: center;
-    width: 60vw;
-}
-
-#main_quote{
-    font-size: calc(6px + 1vw);
-    font-weight: 500;
-    color: #BD385E;;
-}
-
-img{
-    border-radius: 20px;
-    height: auto;
-    width: 60vw;
-}
-
-.button-container{
-    margin: 3vh 0;
-}
-
-.button-container button {
-    background-color: #8BC48B; 
-    color: white;
-    font-size: calc(5px + 1vw);
-    font-weight: 600;
-    padding: 2vh 3vw;
-    border: solid #489452 1px;
-    border-radius: 10px;
-}
-
-footer{
-    font-size: calc(2px + 1vw);
-    color: #888888;
-    padding: 2% 0;
-}
-
-.about_section{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.about_section h1{
-    margin-bottom: 2%;
-}
-
-.about_section p{
-    font-size: calc(4px + 1vw);
-    width: 75vw;
-    margin-bottom: 5%;
-}
-
-.about_section h3{
-    margin-bottom: 2%;
-}
-
-.show_all_section{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.show_all_section h1{
-    margin-bottom: 5%;
-}
-
-.show_all_section h3{
-    margin: 5% 0 2% 0;
-}
-
-.show_all_section p{
-    font-size: calc(4px + 1vw);
-    width: 75vw;
-    margin-bottom: 5%;
-}
-
-.all_images{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 3%;
-}
-
-.all_quotes {
-    margin: auto;
-    border: 1px solid #BD385E; 
-    border-radius: 20px;
-    padding: 5%;
-    width: 60vw;
-}
-
-.all_quotes ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.all_quotes li {
-    margin: 2% 0;
-    font-size: calc(4px + 1vw);
 }
