all styling has been applied

--- a/restaurant/templates/restaurant/base.html
+++ b/restaurant/templates/restaurant/base.html
@@ -6,12 +6,11 @@ Description: This is the base template for the quotes app.
 
 {% load static %}
 
-
 <html>
 
     <head>
         <title>Oasis Sweet Restaurant</title>
-        <link rel="stylesheet" href ="{% static 'styles.css' %}">
+        <link rel="stylesheet" href="{% static 'styles_v2.css' %}">
     </head>
 
     
