fixed all comments

--- a/restaurant/templates/restaurant/order.html
+++ b/restaurant/templates/restaurant/order.html
@@ -1,7 +1,7 @@
 <!-- 
 File: base.html
 Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
-Description: This is the base template for the quotes app.
+Description: This is the base template for the restaurant app.
 -->
 
 
