--- a/restaurant/templates/restaurant/main.html
+++ b/restaurant/templates/restaurant/main.html
@@ -1,7 +1,7 @@
 <!-- 
 File: base.html
 Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
-Description: This is the base template for the restaurant app.
+Description: This is the main template for the restaurant app.
 -->
 
 {% extends "restaurant/base.html" %}
