made changed to set article to profile for this assignment

--- a/mini_insta/templates/mini_insta/base.html
+++ b/mini_insta/templates/mini_insta/base.html
@@ -6,7 +6,7 @@
 
     <head>
         <title>Mini Instagram</title>
-        <link rel="stylesheet" href="{% static 'styles-mini_insta.css' %}">
+        <link rel="stylesheet" href="{% static 'styles_v2.css' %}">
     </head>
 
     
