--- a/mini_insta/templates/mini_insta/show_all_profile.html
+++ b/mini_insta/templates/mini_insta/show_all_profile.html
@@ -6,7 +6,23 @@
 <h1>Show all Profiles</h1>
 
 <main class="grid-container"> 
-   
+    {% for profile in profiles %}
+    <profile>
+        <div>
+            <h2>{{ profile.name }}</h2>
+            <h3>by {{ profile.user.username }}</h3>
+            <p>{{ profile.bio }}</p>
+        </div>
+
+        <a href="{% url 'profile' profile.pk %}">
+            <img src="{{ profile.image_url }}" alt="">
+        </a>
+        <hr>
+        {% endfor %}
+    </profile>
 </main>
 
 {% endblock %}
+
+
+
