--- a/mini_insta/templates/mini_insta/show_profile.html
+++ b/mini_insta/templates/mini_insta/show_profile.html
@@ -5,7 +5,19 @@
 
 
 <main class="grid-container"> 
-    
+
+    <profile>
+        <div>
+            <h2>{{ profile.name }}</h2>
+            <h3>by {{ profile.user.username }}</h3>
+            <p>{{ profile.bio }}</p>
+        </div>
+
+        <img src="{{ profile.image_url }}" alt="">
+        <hr>
+
+    </profile>
+   
 </main>
 
 {% endblock %}
