updated the files so that show_profile works and debugged

--- a/mini_insta/templates/mini_insta/base.html
+++ b/mini_insta/templates/mini_insta/base.html
@@ -6,7 +6,7 @@
 
     <head>
         <title>Mini Instagram</title>
-        <link rel="stylesheet" href="{% static 'styles_v2.css' %}">
+        <link rel="stylesheet" href="{% static 'styles-mini-insta.css' %}">
     </head>
 
     
@@ -18,8 +18,7 @@
 
         <nav>
             <ul>
-                <li><a href="{% url 'show_profile' %}">Random Article</a></li>
-                <li><a href="{% url 'show_all_profile' %}">Show All</a></li>
+                <li><a href="{% url 'show_all' %}">Show All</a></li>
             </ul>
         </nav>
         
