--- a/mini_insta/templates/mini_insta/show_all_profile.html
+++ b/mini_insta/templates/mini_insta/show_all_profile.html
@@ -9,14 +9,16 @@
     {% for profile in profiles %}
     <profile>
         <div>
-            <h2>{{ profile.name }}</h2>
-            <h3>by {{ profile.user.username }}</h3>
-            <p>{{ profile.bio }}</p>
+            <h2>{{ profile.username }}</h2>
+            <h3>by {{ profile.display_name }}</h3>
+            <p>{{ profile.bio_text }}</p>
         </div>
 
         <a href="{% url 'profile' profile.pk %}">
-            <img src="{{ profile.image_url }}" alt="">
+            <img src="{{ profile.profile_image_url }}" alt="">
         </a>
+
+        <p>{{ profile.join_date }}</p>
         <hr>
         {% endfor %}
     </profile>
