--- a/mini_insta/templates/mini_insta/base.html
+++ b/mini_insta/templates/mini_insta/base.html
@@ -5,7 +5,7 @@
 <html>
 
     <head>
-        <title>Mini Instagram</title>
+        <title>Chiikawa Mini Instagram</title>
         <link rel="stylesheet" href="{% static 'styles-mini-insta.css' %}">
     </head>
 
@@ -13,12 +13,12 @@
     <body>
 
         <header>
-            <h1> Mini Instagram </h1>
+            <h1> Chiikawa Mini Instagram </h1>
         </header>
 
         <nav>
             <ul>
-                <li><a href="{% url 'show_all' %}">Show All</a></li>
+                <li><a href="{% url 'show_all_profiles' %}">Show All</a></li>
             </ul>
         </nav>
         
@@ -33,7 +33,7 @@
 
         <footer>
             <p>&#169 Ruby Chen 2025. All rights reserved</p>
-            </p>Generated at: {{time}}</p>
+            <p><a href="{% url 'show_all_profiles' %}">All Profiles</a></p>
         </footer>
     </body>
 
