--- a/mini_insta/templates/mini_insta/show_profile.html
+++ b/mini_insta/templates/mini_insta/show_profile.html
@@ -4,22 +4,23 @@
 {% block content %}
 
 
-<main class="grid-container"> 
+<main class="wrapper"> 
 
     <profile>
-        <div>
-            <h2>{{ profile.username }}</h2>
-            <h3>by {{ profile.display_name }}</h3>
+        
+        <hr>
+        <div class="profile-text">
+            <h2>@{{ profile.username }}</h2>
+            <h3>{{ profile.display_name }}</h3>
             <p>{{ profile.bio_text }}</p>
         </div>
 
-        <a href="{% url 'profile' profile.pk %}">
+        <a href="{% url 'show_profile' profile.pk %}">
             <img src="{{ profile.profile_image_url }}" alt="images of the chiikawa characters">
         </a>
 
         <p>{{ profile.join_date }}</p>
         <hr>
-        {% endfor %}
     </profile>
    
 </main>
