--- a/mini_insta/templates/mini_insta/base.html
+++ b/mini_insta/templates/mini_insta/base.html
@@ -1,4 +1,8 @@
-
+<!-- 
+File: base.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This is the base template for the mini_insta app.
+-->
 
 {% load static %}
 
@@ -12,6 +16,7 @@
     
     <body>
 
+        <!-- Header and Nav for page  -->
         <header>
             <h1> Chiikawa Mini Instagram </h1>
         </header>
@@ -31,6 +36,7 @@
 
         </main>
 
+        <!-- footer with a nav link to all profiles -->
         <footer>
             <p>&#169 Ruby Chen 2025. All rights reserved</p>
             <p><a href="{% url 'show_all_profiles' %}">All Profiles</a></p>
