--- a/mini_insta/templates/mini_insta/show_profile.html
+++ b/mini_insta/templates/mini_insta/show_profile.html
@@ -1,3 +1,8 @@
+<!-- 
+File: show_profile.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This is the singular profile template for the mini_insta app.
+-->
 
 {% extends 'mini_insta/base.html' %}
 
@@ -8,6 +13,10 @@
 
     <profile>
         
+        <!-- Displays a singular user's username, display name, bio, 
+            profile image, and join date. based on the data passed 
+            into the model  -->
+
         <hr>
         <div class="profile-text">
             <h2>@{{ profile.username }}</h2>
