commiting everything for updated blog and for task 1 of assignment 4

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,6 +20,7 @@
             <ul>
                 <li><a href="{% url 'random_article' %}">Random Article</a></li>
                 <li><a href="{% url 'show_all' %}">Show All</a></li>
+                <li><a href="{% url 'create_article' %}">Create</a></li>
             </ul>
         </nav>
         
