updated and added lots of comments for context

--- a/mini_insta/templates/mini_insta/base.html
+++ b/mini_insta/templates/mini_insta/base.html
@@ -36,7 +36,8 @@ Description: This is the base template for the mini_insta app.
 
         </main>
 
-        <!-- footer with a nav link to all profiles -->
+        <!-- footer with a nav link to all profiles and 
+         something to create a new post if in a profile-->
         <footer>
             <p>&#169 Ruby Chen 2025. All rights reserved</p>
             <p><a href="{% url 'show_all_profiles' %}">All Profiles</a></p>
