--- a/mini_insta/templates/mini_insta/show_all_profile.html
+++ b/mini_insta/templates/mini_insta/show_all_profile.html
@@ -34,6 +34,7 @@ Description: This is the show all profile template for the mini_insta app.
             <img src="{{ profile.profile_image_url }}" alt="" width="40%">
         </a>
 
+        <!-- Displays the users join datee -->
         <p>{{ profile.join_date }}</p>
         <hr>
         {% endfor %}
