--- a/mini_insta/templates/mini_insta/show_profile.html
+++ b/mini_insta/templates/mini_insta/show_profile.html
@@ -32,12 +32,16 @@ Description: This is the singular profile template for the mini_insta app.
         <hr>
     </profile>
 
+    <!-- Display all posts by the profile -->
     <h2> Posts by {{ profile.username }}</h2>
 
+    <!-- display the first image of each post -->
     <div>
         {% for post in profile.get_all_posts %}
             <div class="post">
                     <div class="photos">
+                        <!-- if there are photos then display them 
+                         or else display a no image available image-->
                         {% if post.get_all_photos %}
                             <img src="{{ post.get_all_photos.0.image_url }}" alt="Post image">
                             <p>photo taken on {{ post.get_all_photos.0.timestamp }}</p>
