updated blog for assignment 5

--- a/blog/templates/blog/article.html
+++ b/blog/templates/blog/article.html
@@ -8,11 +8,20 @@
 <main class="grid-container"> 
     
     <article>
-        <img src={{article.image_url}} alt="">
+
+        {% if article.image_file %}
+        <img src="{{ article.image_file.url }}" alt="">
+        {% else %}
+        <h3>No image</h3>
+        {% endif %}
+
         <div>
             <h2>{{ article.title }}</h2>
             <h3>by {{ article.author }} at {{ article.published }}</h3>
             <p>{{ article.text }}</p>
+            <h3>
+                <a href="{% url 'update_article' article.pk %}">Update Article</a>
+            </h3>
         </div>
 
 
@@ -31,6 +40,8 @@
                 <strong>by {{ comment.author }} at {{ comment.published }}</strong>
                 <p>
                     {{ comment.text }}
+
+                    <a href="{% url 'delete_comment' comment.pk %}">Delete</a>
                 </p>
             </div>
             {% endfor %}
