--- a/blog/templates/blog/create_article_form.html
+++ b/blog/templates/blog/create_article_form.html
@@ -5,7 +5,8 @@
 
 <h1>Create a New Article</h1>
 
-<form action=" {% url 'create_article' %} " method="post">
+<form action=" {% url 'create_article' %} " method="post"
+    enctype="multipart/form-data">
     {% csrf_token %}
 
     <table>
