--- a/blog/templates/blog/show_all.html
+++ b/blog/templates/blog/show_all.html
@@ -14,8 +14,13 @@
             <p>{{ article.text }}</p>
         </div>
 
+        
         <a href="{% url 'article' article.pk %}">
-            <img src="{{ article.image_url }}" alt="">
+            {% if article.image_file %}
+            <img src="{{ article.image_file.url }}" alt="">
+            {% else %}
+            <h3>No image</h3>
+            {% endif %}
         </a>
         <hr>
         {% endfor %}
