--- a/mini_insta/templates/mini_insta/show_post.html
+++ b/mini_insta/templates/mini_insta/show_post.html
@@ -38,8 +38,12 @@ Description: This is the singular post template for the mini_insta app.
             <p><strong>@{{ post.profile.username }}</strong>: {{ post.caption }}</p>
             <p>Posted on {{ post.timestamp }}</p>
 
-            <a class="primary buttons" href="{% url 'update_post' post.pk %}">Update</a>
-            <a class="primary buttons" href="{% url 'delete_post' post.pk %}">Delete</a>
+            <form action="{% url 'update_post' post.pk %}" method="get" style="display:inline;">
+                    <button type="submit">Update</button>
+            </form>
+            <form action="{% url 'delete_post' post.pk %}" method="get" style="display:inline;">
+                    <button type="submit">Delete</button>
+            </form>
         </div>
 
     </post>
